@@ -6,6 +6,7 @@ namespace mesmer
 
 //static variable
 Rdouble*  Rdouble::pendingVar;
+const double Rdouble::eps = 1e-7;
 
 Rdouble& Rdouble::operator = (const double& val)
 {
@@ -18,23 +19,24 @@ Rdouble& Rdouble::operator = (const double& val)
 
 void Rdouble::set_range(const double valueL, const double valueU, const double valueS, const char* txt)
 {
-  double numStep = (valueU - valueL)/valueS;
   if(valueU<valueL || valueS<0)
   {
-    cerr << "The upper value should be larger than lower and the stepsize should be positive"<<endl;
+    cerr << "in " << txt << " The upper value should be larger than lower and the stepsize should be positive"<<endl;
     return;
   }
-  if (numStep < 1)
-    cerr << "There is only one point for this variable. Remove range setting to clear this error."<<endl;
 
   //Push on to the vector of Rdouble objects which have a range
   withRange().push_back(this);
   value    = lower = valueL;
   upper    = valueU;
   stepsize = valueS;
+  varname  = txt;
   prev     = NaN;
 
-  cinfo << txt <<" was given a range with " << (int)numStep+1 << " steps " << endl;
+  if (get_numsteps() <= 1)
+    cwarn << "There is only one point for the range variable " << txt << endl;
+
+  cinfo << txt <<" was given a range with " << get_numsteps() << " steps " << endl;
 }
 
 void Rdouble::set_range_indirect
