@@ -13,13 +13,18 @@ class Rdouble
 {
 private:
   double value, lower, upper, stepsize, prev;
+  const char* varname;
   static Rdouble* pendingVar;
+  static const double eps;
 public:
-  Rdouble(double val=0.0):value(val),lower(NaN),upper(NaN),stepsize(NaN), prev(NaN){}
+  Rdouble(double val=0.0):value(val),lower(NaN),upper(NaN),stepsize(NaN), prev(NaN), varname(NULL){}
   
   operator double() const  { return value; }
   Rdouble& operator = (const double& val);
 
+  double set_to_lower() { return value = lower; }
+  void test(){return;}
+  
   //Vector of RDoubles that have a range. 
   //A function, rather than static member variable, for proper initialization.   
   static std::vector<Rdouble*>& withRange()
@@ -34,25 +39,32 @@ public:
 
   bool get_range(double& lower_, double& upper_, double& stepsize_)const;
 
+  const char* get_varname(){ return varname; }
+  int get_numsteps(){ return (int)(1 + eps + (upper - lower) / stepsize); } 
+
   //Returns true if the value is the same as when setUnchanged was last called.
   bool isUnchanged() { return (prev==value); }
 
   void setUnchanged() { prev = value; }
 
   // Increment the current value by stepsize if the result will be <= upper
-  // and return the result. If not incremented return NaN.
+  // and return the result. If not incremented return NaN and the value is reset to lower.
   //This is pre-increment: it is the new value after incrementing that is returned. 
   const double& operator++()
   {
-    if(value + stepsize > upper)
-      return NaN;
-    return value += stepsize;
+    value += stepsize;
+    if(value-upper < eps*stepsize)
+      return value; 
+    value = lower;
+    return NaN;
   }
   const double& operator--()
   {
-    if(value - stepsize < upper)
-      return NaN;
-    return value -= stepsize;
+    value -= stepsize;
+    if(lower-value < eps*stepsize)
+      return value; 
+    value = upper;
+    return NaN;
   }
 };
 
@@ -63,11 +75,11 @@ of values, and the one actually in use currently can be controlled externally.
 All that is necessary is for the variable type to be changed from
 double to Rdouble, At this stage it behaves as it did before, like a double.
 
-To give it a range, and if there isaccess to the variable, use set_range().
+To give it a range, and if there is access to the variable, use set_range().
 If there is not, for example, if a member variable of Reaction is being set
 from an ILT class, the trick used is to set the value to NaN, which stores
 its address in a static variable. The static function Rdouble::set_rangeindirect()
-uis then called to set the range, e.g.,
+is then called to set the range, e.g.,
 
   pReact->set_EInf(NaN);
   Rdouble::set_range_indirect(valueL, valueU, valueS, "EInf");
@@ -78,8 +90,10 @@ intended to contain the name of the variable and is used in a log message.
 RDouble::withRange() returns a reference to the std::vector<Rdouble*>
 that contains pointers to all the Rdoubles with a range set.
 This allows the current value of any of these to be set to anything.
-Alternatively, an Rdouble can be incremented or decremented using ++ or --,
-when the end of the range is indicated by NaN being returned.  
+Alternatively, an Rdouble can be incremented using ++. Normally the return
+is the value after incrementing but at the end of the range NaN is returned
+and the value is reset to the lower value.
+
 */
 
 }//namespace
